@@ -1,3 +1,14 @@
+2013-01-24  Seokju Kwon  <seokju.kwon@gmail.com>
+
+        [EFL] Unreviewed build fix after r140711
+        https://bugs.webkit.org/show_bug.cgi?id=107873
+
+        Unreviewed build fix.
+
+        Build break after r140711.
+
+        * CMakeLists.txt: Move WebKeyValueStorageManager to WebProcess/Storage.
+
 2013-01-24  Jae Hyun Park  <jae.park@company100.net>
 
         Coordinated Graphics: remove SurfaceUpdateInfo::encode/decode
